--- a/gst-plugins-good/examples/Makefile.am
+++ b/gst-plugins-good/examples/Makefile.am
@@ -1,5 +1,11 @@
+if HAVE_FT2
+FT2_SUBDIRS=seeking
+else
+FT2_SUBDIRS=
+endif
+
 if HAVE_GTK
-GTK_SUBDIRS=dynparams seeking
+GTK_SUBDIRS=dynparams $(FT2_SUBDIRS)
 else
 GTK_SUBDIRS=
 endif
