--- a/gst-plugins-bad/examples/seeking/Makefile.am
+++ b/gst-plugins-bad/examples/seeking/Makefile.am
@@ -3,5 +3,5 @@ examples = seek spider_seek
 noinst_PROGRAMS = $(examples)
 
 # we have nothing but apps here, we can do this safely
-LIBS = $(GST_LIBS) $(GTK_LIBS) -lfreetype
-CFLAGS = $(GST_CFLAGS) $(GTK_CFLAGS)
+LIBS = $(GST_LIBS) $(GTK_LIBS) $(FT2_LIBS)
+CFLAGS = $(GST_CFLAGS) $(GTK_CFLAGS) $(FT2_CFLAGS)
