add core elements to the registry pool plugin list fix python check
Original commit message from CVS:
* add core elements to the registry pool plugin list
* fix python check

--- a/gstreamer/configure.ac
+++ b/gstreamer/configure.ac
@@ -504,6 +504,7 @@ docs/manual/Makefile
 docs/fwg/Makefile
 docs/xsl/Makefile
 docs/devhelp/Makefile
+docs/devhelp/html2xml.py
 stamp.h
 gstreamer.pc
 gstreamer-uninstalled.pc
