--- a/gstreamer/gstreamer.spec.in
+++ b/gstreamer/gstreamer.spec.in
@@ -30,6 +30,7 @@ Prereq:		/sbin/ldconfig
 BuildRequires:  openjade
 BuildRequires:  python2
 BuildRequires:  docbook-style-dsssl docbook-dtd31-sgml
+BuildRequires:	transfig
 
 %description
 GStreamer is a streaming-media framework, based on graphs of filters which
@@ -208,6 +209,9 @@ ln -sf %{_datadir}/gtk-doc/html/gstreamer-libs %{_datadir}/devhelp/books
 
 
 %changelog
+* Sun Sep 08 2002 Thomas Vander Stichele <thomas@apestaart.org>
+- added transfig to the BuildRequires:
+
 * Sat Jun 22 2002 Thomas Vander Stichele <thomas@apestaart.org>
 - moved header location
 
