--- a/gst-plugins-base/gst-plugins.spec.in
+++ b/gst-plugins-base/gst-plugins.spec.in
@@ -682,6 +682,21 @@ GStreamer support libraries header files.
 @USE_V4L_TRUE@%{_libdir}/gst/libgstv4lmjpegsrc.so
 @USE_V4L_TRUE@%{_libdir}/gst/libgstv4lmjpegsink.so
 
+### VIDEO 4 LINUX 2 ###
+@USE_V4L2_TRUE@%package -n gstreamer-v4l2
+@USE_V4L2_TRUE@Summary:       GStreamer Video for Linux 2 plug-in.
+@USE_V4L2_TRUE@Group:         Libraries/Multimedia
+@USE_V4L2_TRUE@Requires:      gstreamer-plugins = %{version}
+@USE_V4L2_TRUE@BuildRequires: glibc-devel
+@USE_V4L2_TRUE@
+@USE_V4L2_TRUE@%description -n gstreamer-v4l2
+@USE_V4L2_TRUE@Plug-in for accessing Video for Linux devices.
+@USE_V4L2_TRUE@
+@USE_V4L2_TRUE@%files -n gstreamer-v4l2
+@USE_V4L2_TRUE@%defattr(-, root, root)
+@USE_V4L2_TRUE@%{_libdir}/gst/libgstv4l2element.so
+@USE_V4L2_TRUE@%{_libdir}/gst/libgstv4l2src.so
+
 ### XVIDEO ###
 @USE_XVIDEO_TRUE@%package -n gstreamer-xvideosink
 @USE_XVIDEO_TRUE@Summary: GStreamer XFree output plug-in
@@ -907,6 +922,8 @@ processed with the lavtools from mjpegtools.
 @USE_GCONF_TRUE@gconftool-2 --makefile-install-rule %{_sysconfdir}/gconf/schemas/gstreamer.schemas > /dev/null
 
 %changelog
+* Mon Sep 9 2002 Christian Schaller <Uraeus@linuxrising.org>
+- Added v4l2 plugin
 * Thu Aug 27 2002 Christian Schaller <Uraeus@linuxrising.org>
 - Fixed USE_DV_TRUE to USE_LIBDV_TRUE
 - Added Gconf and floatcast headers to gstreamer-plugins-devel package
