--- a/gstreamer/testsuite/threads/Makefile.am
+++ b/gstreamer/testsuite/threads/Makefile.am
@@ -1,9 +1,19 @@
-testprogs = thread
+testprogs = thread1 thread2 thread3 thread4 thread5
 
 TESTS = $(testprogs)
 
 check_PROGRAMS = $(testprogs)
 
-# we have nothing but apps here, we can do this safely
-thread_LDADD = $(GST_LIBS) 
-thread_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+LDADD = $(GST_LIBS) 
+CFLAGS = $(GST_CFLAGS)
+
+thread1_SOURCES = thread.c
+thread1_CFLAGS = -DTESTNUM=1
+thread2_SOURCES = thread.c
+thread2_CFLAGS = -DTESTNUM=2
+thread3_SOURCES = thread.c
+thread3_CFLAGS = -DTESTNUM=3
+thread4_SOURCES = thread.c
+thread4_CFLAGS = -DTESTNUM=4
+thread5_SOURCES = thread.c
+thread5_CFLAGS = -DTESTNUM=5
