--- a/gstreamer/gst/schedulers/Makefile.am
+++ b/gstreamer/gst/schedulers/Makefile.am
@@ -1,34 +1,38 @@
 plugindir = $(libdir)/gst
 
-plugin_LTLIBRARIES = libgstbasicscheduler.la libgststandardscheduler.la libgstfastbasicscheduler.la libgstfaststandardscheduler.la
+plugin_LTLIBRARIES = \
+	libgstbasicomegascheduler.la \
+	libgstbasicwingoscheduler.la \
+	libgstfastomegascheduler.la \
+	libgstfastwingoscheduler.la
 
-libgstbasicscheduler_la_SOURCES = gstbasicscheduler.c 
-libgstbasicscheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_BASIC
-libgstbasicscheduler_la_LIBADD = ../libcothreads.la
-libgstbasicscheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstbasicomegascheduler_la_SOURCES = gstbasicscheduler.c 
+libgstbasicomegascheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_OMEGA
+libgstbasicomegascheduler_la_LIBADD = ../libcothreads.la
+libgstbasicomegascheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 # some silly bug prevents us from putting both $(top_builddir) and
 # $(src_dir) on the same line for CFLAGS (try it, reverse them, see the
 # strangeness on your gcc line) so we pull this dirty += trick on it, hah !
-libgststandardscheduler_la_SOURCES = gstbasicscheduler.c
-libgststandardscheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_STANDARD
-libgststandardscheduler_la_CFLAGS += -I$(top_builddir)/libs/ext/cothreads
-libgststandardscheduler_la_CFLAGS += -I$(top_srcdir)/libs/ext/cothreads
+libgstbasicwingoscheduler_la_SOURCES = gstbasicscheduler.c
+libgstbasicwingoscheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_WINGO
+libgstbasicwingoscheduler_la_CFLAGS += -I$(top_builddir)/libs/ext/cothreads
+libgstbasicwingoscheduler_la_CFLAGS += -I$(top_srcdir)/libs/ext/cothreads
 
-libgststandardscheduler_la_LIBADD = $(top_builddir)/libs/ext/cothreads/cothreads/libcothreads-gthreads.la
-libgststandardscheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstbasicwingoscheduler_la_LIBADD = $(top_builddir)/libs/ext/cothreads/cothreads/libcothreads-gthreads.la
+libgstbasicwingoscheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-libgstfastbasicscheduler_la_SOURCES = gstfastscheduler.c 
-libgstfastbasicscheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_BASIC
-libgstfastbasicscheduler_la_LIBADD = ../libcothreads.la
-libgstfastbasicscheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstfastomegascheduler_la_SOURCES = gstfastscheduler.c 
+libgstfastomegascheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_OMEGA
+libgstfastomegascheduler_la_LIBADD = ../libcothreads.la
+libgstfastomegascheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-libgstfaststandardscheduler_la_SOURCES = gstfastscheduler.c
-libgstfaststandardscheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_STANDARD
-libgstfaststandardscheduler_la_CFLAGS += -I$(top_builddir)/libs/ext/cothreads
-libgstfaststandardscheduler_la_CFLAGS += -I$(top_srcdir)/libs/ext/cothreads
-libgstfaststandardscheduler_la_LIBADD = $(top_builddir)/libs/ext/cothreads/cothreads/libcothreads-gthreads.la
-libgstfaststandardscheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstfastwingoscheduler_la_SOURCES = gstfastscheduler.c
+libgstfastwingoscheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_WINGO
+libgstfastwingoscheduler_la_CFLAGS += -I$(top_builddir)/libs/ext/cothreads
+libgstfastwingoscheduler_la_CFLAGS += -I$(top_srcdir)/libs/ext/cothreads
+libgstfastwingoscheduler_la_LIBADD = $(top_builddir)/libs/ext/cothreads/cothreads/libcothreads-gthreads.la
+libgstfastwingoscheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 ## this is a REALLY evil hack 
 ## but we need to keep it as long as we have libs/gst and libs/ext
