Added optimal scheduler to build and call it optomega
Original commit message from CVS:
Added optimal scheduler to build and call it optomega

--- a/gstreamer/gst/schedulers/Makefile.am
+++ b/gstreamer/gst/schedulers/Makefile.am
@@ -4,7 +4,8 @@ plugin_LTLIBRARIES = \
 	libgstbasicomegascheduler.la \
 	libgstbasicwingoscheduler.la \
 	libgstfastomegascheduler.la \
-	libgstfastwingoscheduler.la
+	libgstfastwingoscheduler.la \
+	libgstoptomegascheduler.la
 
 libgstbasicomegascheduler_la_SOURCES = gstbasicscheduler.c 
 libgstbasicomegascheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_OMEGA
@@ -33,6 +34,11 @@ libgstfastwingoscheduler_la_CFLAGS += -I$(top_builddir)/libs/ext/cothreads
 libgstfastwingoscheduler_la_CFLAGS += -I$(top_srcdir)/libs/ext/cothreads
 libgstfastwingoscheduler_la_LIBADD = $(top_builddir)/libs/ext/cothreads/cothreads/libcothreads-gthreads.la
 libgstfastwingoscheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+
+libgstoptomegascheduler_la_SOURCES = gstoptimalscheduler.c 
+libgstoptomegascheduler_la_CFLAGS = $(GST_CFLAGS) -D_COTHREADS_OMEGA
+libgstoptomegascheduler_la_LIBADD = ../libcothreads.la
+libgstoptomegascheduler_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 ## this is a REALLY evil hack 
 ## but we need to keep it as long as we have libs/gst and libs/ext
