--- a/gstreamer/tests/old/examples/manual/Makefile.am
+++ b/gstreamer/tests/old/examples/manual/Makefile.am
@@ -4,7 +4,7 @@ else
 GNOME=
 endif
 
-EXAMPLES = $(GNOME) xml
+EXAMPLES = $(GNOME) xml-mp3
 noinst_PROGRAMS = $(EXAMPLES)
 
 LDADD = $(GST_LIBS)
@@ -13,11 +13,13 @@ INCLUDES = $(GST_CFLAGS)
 gnome_LDADD = $(GST_LIBS) $(LIBGNOMEUI_LIBS)
 gnome_CFLAGS = $(GST_CFLAGS) $(LIBGNOMEUI_CFLAGS)
 
+EXTRA_DIST = extract.pl
+
 # for some reason specifying %.c runs us into trouble when running make
 # clean, it starts looking for things like mostlyclean-am.c, please
 # help me fix that so we don't need to specify all sources here
 # also, it's a bit irritating that right now a change in any xml file
 # triggers a rebuild of all examples
 #%.c:
-gnome.c xml.c: $(top_srcdir)/docs/manual/*.xml
+gnome.c xml-mp3.c: $(top_srcdir)/docs/manual/*.xml
 	$(srcdir)/extract.pl $@ $(top_srcdir)/docs/manual/*.xml
