--- a/gstreamer/tests/old/examples/manual/Makefile.am
+++ b/gstreamer/tests/old/examples/manual/Makefile.am
@@ -1,5 +1,5 @@
 if HAVE_LIBGNOMEUI
-GNOME=gnome
+GNOME=gnome dynamic
 else
 GNOME=
 endif
@@ -10,6 +10,8 @@ noinst_PROGRAMS = $(EXAMPLES)
 LDADD = $(GST_LIBS)
 INCLUDES = $(GST_CFLAGS)
 
+dynamic_LDADD = $(GST_LIBS) $(LIBGNOMEUI_LIBS)
+dynamic_CFLAGS = $(GST_CFLAGS) $(LIBGNOMEUI_CFLAGS)
 gnome_LDADD = $(GST_LIBS) $(LIBGNOMEUI_LIBS)
 gnome_CFLAGS = $(GST_CFLAGS) $(LIBGNOMEUI_CFLAGS)
 
@@ -21,5 +23,5 @@ EXTRA_DIST = extract.pl
 # also, it's a bit irritating that right now a change in any xml file
 # triggers a rebuild of all examples
 #%.c:
-gnome.c xml-mp3.c: $(top_srcdir)/docs/manual/*.xml
+dynamic.c gnome.c xml-mp3.c: $(top_srcdir)/docs/manual/*.xml
 	$(srcdir)/extract.pl $@ $(top_srcdir)/docs/manual/*.xml
