--- a/gstreamer/debian/control.in
+++ b/gstreamer/debian/control.in
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 3.0.0), libxml2-dev (>= 2.4.16), zlib1g-dev (>= 1:1
 Build-Depends-Indep: debhelper (>= 3.0.0), gtk-doc-tools (>= 0.4), jade (>= 1.2.1), transfig (>= 3.2.3.c), docbook-utils (>= 0.6.9), xsltproc (>= 1.0.6), gs, python (>= 2.1)
 Standards-Version: 3.5.6
 
-Package: libgstreamer0.4.0.2
+Package: libgstreamer@VERSION@
 Architecture: [alpha arm hppa i386 mips mipsel powerpc sparc]
 Section: libs
 Depends: ${shlibs:Depends}
@@ -17,7 +17,7 @@ Description: Core GStreamer shared library
 Package: libgstreamer-dev
 Architecture: any
 Section: devel
-Depends: libgstreamer0.4.0.2 (= ${Source-Version}), libc6-dev, pkg-config, libpopt-dev, libglib2.0-dev
+Depends: libgstreamer@VERSION@ (= ${Source-Version}), libc6-dev, pkg-config, libpopt-dev, libglib2.0-dev
 Recommends: gstreamer-doc (= ${Source-Version})
 Description: GStreamer development libraries and headers
  GStreamer development libraries and headers
