gstreamer-gconf.files: libgstgconf.so moved to /usr/lib added control.in, build-deps, and mk.control script.  Edit co...
Original commit message from CVS:
* gstreamer-gconf.files: libgstgconf.so moved to /usr/lib
* added control.in, build-deps, and mk.control script.  Edit control.in
and/or build-deps, and run 'debian/rules debian/control' from toplevel
directory to recreate debian/control.  This should make it a lot
easier to diff build dependencies.

--- a/gst-plugins-bad/debian/rules
+++ b/gst-plugins-bad/debian/rules
@@ -29,6 +29,9 @@ else
 	confflags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
 endif
 
+debian/control: debian/control.in debian/build-deps
+	debian/mk.control >debian/control
+
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
