--- a/gst-plugins-bad/gstreamer-libs-uninstalled.pc.in
+++ b/gst-plugins-bad/gstreamer-libs-uninstalled.pc.in
@@ -2,5 +2,7 @@ Name: GStreamer Uninstalled Media-Specific Libraries
 Description: Streaming-media framework media-specific libraries, not installed
 Version: @VERSION@
 Requires: gstreamer = @VERSION@
-Libs: -L${pcfiledir}/gst-libs/gst/gconf
+Libs: -L${pcfiledir}/gst-libs/gst/gconf \
+	-L${pcfiledir}/gst-libs/gst/audio \
+	-L${pcfiledir}/gst-libs/gst/video
 Cflags: -I${pcfiledir}/gst-libs
