adding spider tests
Original commit message from CVS:
adding spider tests

--- a/gst-plugins-base/tests/old/Makefile.am
+++ b/gst-plugins-base/tests/old/Makefile.am
@@ -1,5 +1,6 @@
-SUBDIRS=#seeking ##autoplug
+SUBDIRS=spider #seeking ##autoplug
 ##DIST_SUBDIRS=##autoplug
+DIST_SUBDIRS=spider
 
 GST_PLUGIN_PATH=$(shell cd $(top_builddir) && pwd)
 
