build as a lib rather than a plugin
Original commit message from CVS:
build as a lib rather than a plugin

--- a/gstreamer/libs/gst/control/Makefile.am
+++ b/gstreamer/libs/gst/control/Makefile.am
@@ -21,4 +21,4 @@ libgstcontrol_la_SOURCES = \
     dplinearinterp.c
 
 libgstcontrol_la_CFLAGS = $(GST_CFLAGS) -finline-functions -ffast-math
-libgstcontrol_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstcontrol_la_LDFLAGS = @GST_LT_LDFLAGS@ -version-info @GST_LIBVERSION@
